--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,14 @@
     "@material-ui/icons": "^3.0.2",
     "amcharts3": "^3.21.14",
     "axios": "^0.18.0",
+    "moment": "^2.24.0",
     "react": "^16.8.1",
     "react-alert": "^5.1.0",
     "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.8.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
