--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@amcharts/amcharts3-react": "^3.1.0",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^3.0.0-alpha.30",
     "amcharts3": "^3.21.14",
     "axios": "^0.18.0",
     "i18next": "^15.0.7",
